Fix header image stretching bug

--- a/app/states/root/section-state/project-state/_project-state_styles.scss
+++ b/app/states/root/section-state/project-state/_project-state_styles.scss
@@ -40,8 +40,9 @@
 
 	img
 	{
-		width: 100vw;
-		// height: 100%;
+		min-width: 100vw;
+
+		object-fit: contain;
 	}
 }
 
